[package]
name = "arr_macro"
version = "0.1.3"
authors = ["Josh Mcguigan"]
edition = "2021"
description = "Initialize arrays with ease!"
repository = "https://github.com/JoshMcguigan/arr_macro"
readme = "README.md"
keywords = ["array", "macro", "initialization", "init"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"

[dependencies.syn]
version = "1.0"
default-features = true
features = ["full"]
