[package]
name = "arr_macro_impl"
version = "0.2.1"
authors = ["Josh Mcguigan"]
edition = "2018"
description = "Private impl crate for arr_macro"
repository = "https://github.com/JoshMcguigan/arr_macro"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
quote = "1.0"

[dependencies.syn]
version = "1.0"
default-features = true
features = ["full"]
